fixed centering on mobile view

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -131,22 +131,18 @@
 
     .login-form-container {
         width: 100%;
-        min-height: 100vh;
-    }
-
-    .login-image-container {
-        background: none;
-        border-top-left-radius: 8px;
-        border-bottom-left-radius: 8px;
-        
-    }
-
-    .login-container, .redundant-login-container {
         display: flex;
+        justify-content: center;
         align-items: center;
-        flex-direction: column;
-        margin: 0;
+    }
+
+    .login-image-container, .redundant-login-container {
+        display: none;
+    }
+
+    .login-container {
+        padding: 20%;
         flex: 1;
-        
+        margin: 0;
     }
 }
